# scitos_metralabs

./: .gitignore  CMakeLists.txt  README.md  manifest.xml  stack.xml
Launch/: manual_command_line_hints  scitos_haw_only_start.launch  scitos_haw_schunk_start.launch
Models/: convert_and_gazebo.sh  convert_and_rviz.sh  scitos_haw_only.gv  scitos_haw_only.urdf  scitos_haw_schunk.gv  scitos_haw_schunk.urdf
Models/xacro/: README.txt  scitos_haw_only.xacro  scitos_haw_properties.xacro  scitos_haw_schunk.xacro  scitos_haw_schunk_joints.xacro  scitos_haw_schunk_links.xacro
launch/: scitos_haw_only_start.launch
launch/uuisrc_launch_files/: WORKING_COPY_start_arm_7dof.launch  real.launch  start_arm_7dof.launch
metralabs_msgs/: .gitignore  CMakeLists.txt  manifest.xml  package.xml
metralabs_ros/: .gitignore  CMakeLists.txt  manifest.xml  package.xml
metralabs_ros/cfg/: ScitosG5.cfg
metralabs_ros/docs/: ScitosG5Config.wikidoc
metralabs_ros/launch/: cmd_vel_mux.launch  manual_command_line_hints  scitos_haw_only_start.launch  scitos_haw_schunk_mockup.launch  scitos_haw_schunk_start.launch
metralabs_ros/launch/uuisrc_launch_files/: WORKING_COPY_start_arm_7dof.launch  real.launch  start_arm_5dof.launch  start_arm_7dof.launch  start_arm_hand.launch
metralabs_ros/models/: convert_xacro.sh  scitos_haw_schunk.urdf
metralabs_ros/models/uuisrc-powercube-model/xacro/: arm_5dof.xacro  arm_hand.xacro
metralabs_ros/models/xacro/: scitos_haw_only.xacro  scitos_haw_properties.xacro  scitos_haw_schunk.xacro
metralabs_ros/msg/: ScitosG5Bumper.msg
metralabs_ros/src/: AmtecProtocolArm.h  LWA3ArmUASHH.h  PowerCubeArmUUISRC.h  RobotArm.h  SchunkProtocolArm.h  SchunkServer.h  ScitosBase.cpp  ScitosBase.h  ScitosServer.cpp
models/: convert_and_gazebo.sh  convert_and_rviz.sh  scitos_haw_schunk.gv
models/xacro/: scitos_haw_only.xacro  scitos_haw_schunk.xacro  scitos_haw_schunk_joints.xacro
rqt_scitos_dashboard/: CMakeLists.txt  package.xml  plugin.xml
rqt_scitos_dashboard/src/rqt_scitos_dashboard/: bumper_dash_widget.py  scitos_dashboard.py
scitos_description/: CMakeLists.txt  package.xml
scitos_description/models/: convert_and_gazebo.sh  convert_and_rviz.sh  scitos_haw_only.urdf  scitos_haw_schunk.gv  scitos_haw_schunk.urdf
scitos_description/models/uuisrc-powercube-model/xacro/: arm_5dof.xacro  arm_hand.xacro
scitos_description/models/xacro/: README.txt  scitos_haw_only.xacro  scitos_haw_schunk.xacro  scitos_haw_schunk_joints.xacro
scitos_driver/: manifest.xml
scitos_driver/launch/: manual_command_line_hints  scitos_haw_schunk_start.launch
scitos_driver/launch/uuisrc_launch_files/: start_arm_5dof.launch  start_arm_hand.launch
scitos_driver/models/uuisrc-powercube-model/xacro/: arm_hand.xacro
scitos_metralabs/: CMakeLists.txt  package.xml
scitos_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
scitos_moveit_config/config/: ompl_planning.yaml  scitos_haw_schunk.srdf
scitos_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  scitos_haw_schunk_moveit_controller_manager.launch.xml  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
scitos_moveit_generated/: .setup_assistant  CMakeLists.txt  package.xml
scitos_moveit_generated/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  scitos_haw_schunk.srdf
scitos_moveit_generated/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  scitos_haw_schunk_moveit_controller_manager.launch.xml  sensor_manager.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch  trajectory_execution.launch.xml  warehouse.launch
src/: PowerCube.cpp  PowerCube.h  ScitosBase.cpp  ScitosBase.h  ScitosServer.cpp
src/metralabs_ros/cfg/: ScitosG5Config.py
