<package>
  <name>scitos_metralabs</name>
  <version>0.0.0</version>
  <description>
    ROS packages for the MetraLabs Scitos G5 mobile robot
  </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="felix.kolbe@informatik.haw-hamburg.de">Felix Kolbe</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>GPL</license>

  <url type="website">http://wiki.ros.org/scitos_metralabs</url>
  <url type="repository">https://github.com/felix-kolbe/scitos_metralabs</url>

  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
  <author>Yianni Gatsoulis</author>
  <author>Chris Burbridge</author>
  <author>Lorenzo Riano</author>
  <author>Felix Kolbe</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>metralabs_msgs</run_depend>
  <run_depend>metralabs_ros</run_depend>
  <run_depend>scitos_description</run_depend>

  <export>
    <metapackage/>
  </export>

</package>
